# fintrack

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.claude/: settings.json
.entire/: settings.json
.github/workflows/: release.yml  rust.yml
formats/: amex.yaml  dbs.yaml
specs/: csv.yaml
src/: categorize.rs  db.rs  format.rs  import.rs  main.rs  models.rs  money.rs  qif.rs  report.rs  server.rs  test_util.rs
src/import/: csv.rs  mod.rs  pdf_text.rs  pdf_youtrip.rs  qif.rs  specs.rs
src/migrations/: 01_initial_schema.sql  02_amounts_to_cents.sql  03_rehash_transactions.sql
src/models/: account.rs  category.rs  mod.rs  rule.rs  transaction.rs
src/readers/csv/: mod.rs  reader.rs
src/server/: accounts.rs  categories.rs  mod.rs  transactions.rs
tests/fixtures/: amex.csv  dbs_12col.csv  dbs_9col.csv  dbs_cc.csv  qif_ccard.qif
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  app.css  main.tsx  store.ts  types.ts
web/src/components/: Accounts.tsx  Categories.tsx  FilterBar.tsx  Summary.tsx  Transactions.tsx
