[package]
name = "fintrack"
version = "1.3.0"
edition = "2021"

[[bin]]
name = "fintrack"
path = "src/main.rs"

[dependencies]
clap        = { version = "4",    features = ["derive", "env"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
csv         = "1.3"
chrono      = "0.4"
anyhow      = "1"
regex       = "1"
sha2        = "0.10"
hex         = "0.4"
comfy-table = "7"
shellexpand = "3"

# Server
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
rust-embed  = { version = "8", features = ["mime-guess"] }
mime_guess  = "2"
serde_regex = "1.1.0"
serde_rusqlite = "0.35"
qif_parser = "0.4"

[dev-dependencies]
tempfile = "3"
